--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -26,6 +26,9 @@ a {
   animation-delay: 0.1s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  background: linear-gradient(135deg, #EE5E69 -50%, #F1E9E6 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .Dashboard h1 {
