--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,6 +4,7 @@
     left: 120px;
     right: 120px;
     height: 120px;
+    z-index: 100;
 }
 
 .Header button {
@@ -82,6 +83,20 @@ svg {
 
 svg:hover {
     stroke:#31223F;
+}
+
+@media (max-width: 640px) {
+    .SocialGroup {
+        display: none;
+    }
+    .Logo {
+        display: none;
+    }
+    .Header button {
+        top: 30%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 
