--- a/src/components/header.css
+++ b/src/components/header.css
@@ -31,13 +31,11 @@
     bottom: 1px;
     left: 1px;
     background: #48355B;
-    transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-.Wrap:hover {
-    background: linear-gradient(180deg, #ED5E6A 0%, #5076A6 100%);
 }
 
 .Three {
+    width: 60px;
+    height:60px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -45,11 +43,21 @@
     display: grid;
     grid-template-rows: repeat(3, 3fr);
     grid-gap: 5px;
+    justify-items: center;
+    align-items: center;
+    transition: 2s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
+
+.Three:hover {
+    background: linear-gradient(180deg, #ED5E6A 0%, #5076A6 100%);
+}
+
 .First {
     width: 20px;
     height: 1px;
     background-color: #F1E9E6;
+    position: relative;
+    top: 15px;
 }
 
 .Second {
@@ -61,6 +69,8 @@
     width: 20px;
     height: 1px;
     background-color: #F1E9E6;
+    position: relative;
+    bottom: 15px;
 }
 
 .Logo {
