--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,116 +1,124 @@
 .Header {
-    position: fixed;
-    top: 0;
-    left: 120px;
-    right: 120px;
-    height: 120px;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 120px;
+  right: 120px;
+  height: 120px;
+  z-index: 100;
 }
 
 .HeaderScrolled {
-    background: #48355B;
+  background: #48355b;
 }
 
 .Header button {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 60px;
-    height: 60px;
-    border: none;
-    background: linear-gradient(180deg, #ED5E6A 0%, #5076A6 100%);
-    cursor: pointer;
-    outline: none;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 60px;
+  height: 60px;
+  border: none;
+  background: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
+  cursor: pointer;
+  outline: none;
 }
 
 .Wrap {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    bottom: 1px;
-    left: 1px;
-    background: #48355B;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  bottom: 1px;
+  left: 1px;
+  background: #48355b;
 }
 
 .Three {
-    width: 60px;
-    height:60px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-rows: repeat(3, 3fr);
-    grid-gap: 5px;
-    justify-items: center;
-    align-items: center;
-    transition: 2s cubic-bezier(0.2, 0.8, 0.2, 1);
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-rows: repeat(3, 3fr);
+  grid-gap: 5px;
+  justify-items: center;
+  align-items: center;
+  overflow: hidden;
 }
-
-.Three:hover {
-    background: linear-gradient(180deg, #ED5E6A 0%, #5076A6 100%);
+.Three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
+  transform: translateY(100%);
+  transition: 0.5s ease-out;
+}
+.Three:hover::before {
+  transform: translateY(0);
 }
 
 .First {
-    width: 20px;
-    height: 1px;
-    background-color: #F1E9E6;
-    position: relative;
-    top: 15px;
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  position: relative;
+  top: 15px;
 }
 
 .Second {
-    width: 20px;
-    height: 1px;
-    background-color: #F1E9E6;
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  position: relative;
 }
 .Third {
-    width: 20px;
-    height: 1px;
-    background-color: #F1E9E6;
-    position: relative;
-    bottom: 15px;
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  position: relative;
+  bottom: 15px;
 }
 
 .Logo {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .SocialGroup {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    column-gap: 25px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  column-gap: 25px;
 }
 
 svg {
-    stroke: #F1E9E6;
+  stroke: #f1e9e6;
 }
 
 svg:hover {
-    stroke:#31223F;
+  stroke: #31223f;
 }
 
 @media (max-width: 640px) {
-    .SocialGroup {
-        display: none;
-    }
-    .Logo {
-        display: none;
-    }
-    .Header button {
-        top: 30%;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+  .SocialGroup {
+    display: none;
+  }
+  .Logo {
+    display: none;
+  }
+  .Header button {
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
-
-
