--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -63,6 +63,10 @@ a {
   border-bottom: 2px solid rgba(241, 233, 230, 0.5);
 }
 
+.Dashboard span:hover {
+  background: rgba(238,94,105,0.3);
+}
+
 .Photo {
   position: absolute;
   top: 0;
