--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -4,6 +4,18 @@
   right: 0;
   bottom: 0;
   left: 0;
+  background: #48355b;
+  animation-name: MenuAnimation;
+  animation-duration: 1.2s;
+  animation-fill-mode: forwards;
+}
+@keyframes MenuAnimation {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
 
 .MenuBackground {
@@ -13,18 +25,114 @@
   width: 100%;
   height: 100%;
   background: #48355b;
+  background-size: cover;
+  background-position: right bottom;
   animation-name: MenuBackgroundAnimation;
-  animation-duration: 1.2s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+/* @keyframes MenuBackgroundAnimation {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
+} */
+.MenuBackgroundChanged2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../images/menu.png');
+  background-size: cover;
+  background-position: right bottom;
+  animation-name: MenuBackgroundAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+.MenuBackgroundChanged4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../images/menu1.png');
+  background-size: cover;
+  background-position: right bottom;
+  animation-name: MenuBackgroundAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+.MenuBackgroundChanged6 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../images/menu2.png');
+  background-size: cover;
+  background-position: center;
+  animation-name: MenuBackgroundAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 @keyframes MenuBackgroundAnimation {
   0% {
-    transform: translateY(-100%);
+    transform: scale(1);
+    opacity: 1;
   }
   100% {
-    transform: translateY(0%);
+    transform: scale(1.1);
+    opacity: 0;
   }
 }
+.MenuBackgroundChanged1 {
+  background: url('../images/menu.png');
+  background-size: cover;
+  background-position: right bottom;
+  animation-name: MenuBackgroundChangedAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 1;
+}
+@keyframes MenuBackgroundChangedAnimation {
+  0% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.MenuBackgroundChanged3 {
+  background: url('../images/menu1.png');
+  background-size: cover;
+  background-position: center;
+  animation-name: MenuBackgroundChangedAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 1;
+}
+.MenuBackgroundChanged5 {
+  background: url('../images/menu2.png');
+  background-size: cover;
+  background-position: center;
+  animation-name: MenuBackgroundChangedAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 1;
+}
+
 .MenuLine {
   width: 1px;
   height: 100%;
@@ -100,6 +208,7 @@
   text-align: center;
   display: grid;
   grid-template-rows: repeat(3, auto);
+  grid-gap: 5px;
   animation-name: MenuBoardAnimation;
   animation-duration: 1.5s;
   animation-delay: 0.8s;
@@ -110,15 +219,16 @@
 @keyframes MenuBoardAnimation {
   0% {
     opacity: 0;
-    transform: translate(-50%,-60%);
+    transform: translate(-50%, -60%);
   }
-  100%{
+  100% {
     opacity: 1;
     transform: translate(-50%, -50%);
   }
 }
 
 .MenuItem {
+  /* border: 1px solid green; */
   -webkit-font-smoothing: antialiased;
   color: #f1e9e6;
   font-family: 'Raleway', sans-serif;
@@ -132,7 +242,12 @@
   animation-duration: 1.2s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-out;
-  background-image: linear-gradient(#F1E9E6 0, #F1E9E6 50%, #EE5E69 50%, #F1E9E6 100%);
+  background-image: linear-gradient(
+    #f1e9e6 0,
+    #f1e9e6 50%,
+    #ee5e69 50%,
+    #f1e9e6 100%
+  );
   background-size: 100% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -177,7 +292,7 @@
     opacity: 0;
     transform: translateY(100%);
   }
-  100%{
+  100% {
     opacity: 1;
     transform: translate(0);
   }
