--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -97,3 +97,15 @@ a {
     font-size: 48px;
   }
 }
+
+.videoContainer {
+  /* border: 1px solid green; */
+  position: absolute;
+  top:0;
+  width: 100%;
+  height: 75%;
+  overflow: hidden;
+}
+.backgroundVideo {
+  margin-top: -8%;
+}
