--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,700,800');
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px; /*15-20px is readable for body text*/
   line-height: 2; /*1.2-1.5 is readable for body text*/
   -webkit-font-smoothing: antialiased;
   margin: 0;
-  background: #48355B;
+  background: #48355b;
 }
 
 a {
-  color: #F1E9E6;
+  color: #f1e9e6;
   text-decoration: none;
 }
 
@@ -26,7 +27,7 @@ a {
   animation-delay: 0.1s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
-  background: linear-gradient(135deg, #EE5E69 -50%, #F1E9E6 100%);
+  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -43,19 +44,19 @@ a {
 
 .Dashboard h1 {
   margin: 0;
-  color: #F1E9E6;
+  color: #f1e9e6;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 52px;
   line-height: 1.2;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
 .Dashboard p {
   margin: 26px 0 0 0;
-  color: #F1E9E6;
+  color: #f1e9e6;
   font-family: 'Raleway', sans-serif;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   font-weight: 700;
 }
 
@@ -64,29 +65,7 @@ a {
 }
 
 .Dashboard span:hover {
-  background: rgba(238,94,105,0.3);
-}
-
-.Photo {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: white;
-  text-align: center;
-  padding: 100px;
-}
-.Photo img {
-  display: block;
-  margin: auto;
-  border-radius: 50%;
-}
-.Photo h1 {
-  font-size: 24px;
-}
-.Photo a {
-  color: black;
+  background: rgba(238, 94, 105, 0.3);
 }
 
 @media (max-width: 640px) {
@@ -100,12 +79,95 @@ a {
 
 .videoContainer {
   /* border: 1px solid green; */
-  position: absolute;
-  top:0;
+  /* position: absolute;
+  top:0; */
+  margin: auto;
   width: 100%;
-  height: 75%;
+  max-height: 500px;
   overflow: hidden;
 }
 .backgroundVideo {
   margin-top: -8%;
+}
+
+.container {
+  /* border: 1px solid green; */
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 340px;
+  margin-bottom: 0;
+}
+
+.leftContainer {
+  padding: 0;
+  background: #f1e9e6;
+}
+.name {
+  position: relative;
+  top: -200px;
+  margin-left: 120px;
+  color: #f1e9e6;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: -2px;
+}
+.liran {
+  position: relative;
+  top: -230px;
+  margin-left: 120px;
+  color: #48355b;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 144px;
+  line-height: 1.2;
+  letter-spacing: -2px;
+}
+.yin {
+  position: relative;
+  top: -290px;
+  margin-left: 120px;
+  color: #48355b;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 144px;
+  line-height: 1.2;
+  letter-spacing: -2px;
+}
+
+.SocialGroup1 {
+  position: absolute;
+  top: 10px;
+  left: 120px;
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  column-gap: 10px;
+}
+
+svg {
+  stroke: #f1e9e6;
+}
+
+svg:hover {
+  stroke: #31223f;
+}
+
+.headshotContainer {
+  position: relative;
+  margin: auto;
+  top: -55px;
+  width: 110px;
+  height: 110px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+}
+
+.headshotContainer img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  margin: auto;
+  border-radius: 50%;
 }
