--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -188,5 +188,17 @@ svg:hover {
   align-items: center;
 }
 .rightContainer a img {
-  padding: 0 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.rightContainer a p {
+  line-height: 1; /*1.2-1.5 is readable for body text*/
+}
+
+.leftContainer p {
+  width: 80%;
+  margin: auto;
+  position: relative;
+  top: -250px;
+  letter-spacing: 0.5px;
 }
