--- a/src/components/hamburger.css
+++ b/src/components/hamburger.css
@@ -20,6 +20,7 @@
   }
   
   .Three {
+    /* border: 1px solid green; */
     width: 60px;
     height: 60px;
     position: absolute;
@@ -27,7 +28,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     display: grid;
-    grid-template-rows: repeat(3, 3fr);
+    grid-template-rows: repeat(3,3fr);
     grid-gap: 5px;
     justify-items: center;
     align-items: center;
@@ -52,27 +53,31 @@
     width: 20px;
     height: 1px;
     background-color: #f1e9e6;
-    position: relative;
-    top: 15px;
+    /* position: relative;
+    top: 15px; */
+    transform: translateY(15px);
   }
   
   .Second {
     width: 20px;
     height: 1px;
     background-color: #f1e9e6;
-    position: relative;
+    transform: translateY(0);
+    /* position: relative; */
   }
   .Third {
     width: 20px;
     height: 1px;
     background-color: #f1e9e6;
-    position: relative;
-    bottom: 15px;
+    /* position: relative;
+    bottom: 15px; */
+    transform: translateY(-15px);
+
   }
   
   @media (max-width: 640px) {
     .Hamburger button {
-      top: 30%;
+      top: 20px;
       left: 50%;
       transform: translateX(-50%);
     }
