--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,14 +1,18 @@
 .Header {
+  /* border: 1px solid green; */
   position: fixed;
   top: 0;
-  left: 120px;
-  right: 120px;
-  height: 120px;
+  left: 0;
+  right: 0;
+  height: 100px;
   z-index: 100;
 }
 
 .HeaderScrolled {
   background: #48355b;
+  z-index: 1000;
+  box-shadow: 0px 3px 12px 0px #2c203797;
+  /* inset 0px 2px 30px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .Logo {
@@ -21,7 +25,7 @@
 .SocialGroup {
   position: absolute;
   top: 30px;
-  left: 0;
+  left: 120px;
   display: grid;
   grid-template-columns: repeat(3, 3fr);
   column-gap: 20px;
