--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -343,7 +343,6 @@ strong a {
   border-radius: 5px;
   padding: 4px 5px;
   cursor: pointer;
-  
 }
 
 .Fade button:hover {
@@ -364,4 +363,8 @@ strong a {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.Content .Header {
+  box-shadow: 0px 3px 12px 0px #2c203797;
 }
