--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,14 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,700,800');
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px; /*15-20px is readable for body text*/
+  font-family: sans-serif;
+  font-size: 100%; /*15px-20px is readable for body text*/
   line-height: 2; /*1.2-1.5 is readable for body text*/
-  -webkit-font-smoothing: antialiased;
+  /* cross-browser */
+  -webkit-font-smoothing: antialiased; /* -webkit- works for early version of Chrome, Safari */
+  -moz-osx-font-smoothing: grayscale; /* -moz- works for early version of Firefox */
   margin: 0;
-  background: #48355b;
+  background-color: #48355b;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+body::after {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background-image: url(/img/noise.gif);
+  opacity: 0.05;
+  z-index: 10000;
+  pointer-events: none;
 }
 
 a {
@@ -22,23 +37,21 @@ button {
   border: none;
 }
 
-.Dashboard {
-  margin: 240px auto;
-  max-width: 1080px;
-  padding: 0 50px;
+.introduction {
+  /* border: 1px solid green; */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
   text-align: center;
   opacity: 0;
-  animation-name: DashboardAnimation;
+  animation-name: IntroductionAnimation;
   animation-duration: 3s;
   animation-delay: 0.1s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
-  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
-@keyframes DashboardAnimation {
+@keyframes IntroductionAnimation {
   0% {
     opacity: 0;
     transform: translateY(20px);
@@ -49,33 +62,101 @@ button {
   }
 }
 
-.Dashboard span {
+.intro-container {
+  /* border: 1px solid red; */
+  max-width: 1080px;
+  padding: 0 120px;
+  position: relative;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.intro-container h1 {
   margin: 0;
   color: #f1e9e6;
-  font-family: 'Raleway', sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
-  font-size: 48px;
-  line-height: 1.2;
-  letter-spacing: 0.5px;
+  font-size: 7.4vh;
+  line-height: 1.1em;
 }
 
-.Dashboard p {
-  margin: 26px 0 0 0;
+.intro-container p {
+  margin: 0;
+  margin-top: 50px;
   color: #f1e9e6;
   font-family: 'Raleway', sans-serif;
-  letter-spacing: 0.5px;
+  font-size: 20px;
   font-weight: 700;
 }
 
-.Dashboard a {
+.band-container {
+  /* border: 1px solid green; */
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.band {
+  /* border: 1px solid green; */
+  position: relative;
+  top: 0;
+  left: 0;
+  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.band:hover {
+  background: #f1e9e6;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.band a {
   border-bottom: 2px solid rgba(241, 233, 230, 0.5);
 }
 
+.band:hover a {
+  border-bottom: none;
+}
+
+.band:hover::before {
+  transform: translateX(0);
+}
+
+.band::before {
+  /* border: 1px solid green; */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  background: linear-gradient(
+    90deg,
+    rgba(237, 94, 106, 0.5) 0%,
+    rgba(80, 118, 166, 0.5) 100%
+  );
+  -webkit-text-fill-color: #f1e9e6;
+  z-index: -1;
+  transition: 0.5s ease-out;
+  /* display: none; */
+}
+
 @media (max-width: 640px) {
-  .Dashboard {
+  .intro-container {
     margin: 120px auto;
   }
-  .Dashboard span {
+  .intro-container h1 {
     font-size: 48px;
   }
 }
