--- a/src/components/hamburger.css
+++ b/src/components/hamburger.css
@@ -1,85 +1,91 @@
 .Hamburger button {
-    position: fixed;
-    right: 120px;
-    top: 20px;
-    width: 60px;
-    height: 60px;
-    border: none;
-    background: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .Wrap {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    bottom: 1px;
-    left: 1px;
-    background: #48355b;
-  }
-  
-  .Three {
-    /* border: 1px solid green; */
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-rows: repeat(3,3fr);
-    grid-gap: 5px;
-    justify-items: center;
-    align-items: center;
-    overflow: hidden;
-  }
-  .Three::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
-    transform: translateY(100%);
-    transition: 0.5s ease-out;
-  }
-  .Three:hover::before {
-    transform: translateY(0);
-  }
-  
-  .First {
-    width: 20px;
-    height: 1px;
-    background-color: #f1e9e6;
-    /* position: relative;
-    top: 15px; */
-    transform: translateY(15px);
-  }
-  
-  .Second {
-    width: 20px;
-    height: 1px;
-    background-color: #f1e9e6;
-    transform: translateY(0);
-    /* position: relative; */
-  }
-  .Third {
-    width: 20px;
-    height: 1px;
-    background-color: #f1e9e6;
-    /* position: relative;
-    bottom: 15px; */
-    transform: translateY(-15px);
+  position: fixed;
+  right: 100px;
+  top: 60px;
+  width: 60px;
+  height: 60px;
+  border: none;
+  background: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
+  cursor: pointer;
+  outline: none;
+}
 
+.Wrap {
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  bottom: 1px;
+  left: 1px;
+  background: #48355b;
+}
+
+.Three {
+  /* border: 1px solid green; */
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-rows: repeat(3, 3fr);
+  grid-gap: 5px;
+  justify-items: center;
+  align-items: center;
+  overflow: hidden;
+}
+.Three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, #ed5e6a 0%, #5076a6 100%);
+  transform: translateY(100%);
+  transition: 0.5s ease-out;
+}
+.Three:hover::before {
+  transform: translateY(0);
+}
+
+.First {
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  /* position: relative;
+    top: 15px; */
+  transform: translateY(15px);
+}
+
+.Second {
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  transform: translateY(0);
+  /* position: relative; */
+}
+.Third {
+  width: 20px;
+  height: 1px;
+  background-color: #f1e9e6;
+  /* position: relative;
+    bottom: 15px; */
+  transform: translateY(-15px);
+}
+
+@media (max-width: 1024px) {
+  .Hamburger button {
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
   }
-  
-  @media (max-width: 640px) {
-    .Hamburger button {
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+}
+
+@media (max-width: 512px) {
+  .Hamburger button {
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
   }
-  
+}
