--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');
+
 body {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 100%; /*15px-20px is readable for body text*/
   line-height: 2; /*1.2-1.5 is readable for body text*/
   /* cross-browser */
@@ -20,7 +21,7 @@ body::after {
   width: 100%;
   height: 100%;
   content: '';
-  background-image: url(/img/noise.gif);
+  background-image: url(../images/noise.gif);
   opacity: 0.05;
   z-index: 10000;
   pointer-events: none;
@@ -64,7 +65,7 @@ button {
 
 .intro-container {
   /* border: 1px solid red; */
-  max-width: 1080px;
+  max-width: 1024px;
   padding: 0 120px;
   position: relative;
   left: 50%;
@@ -152,13 +153,82 @@ button {
   /* display: none; */
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1024px) {
   .intro-container {
-    margin: 120px auto;
+    padding: 0 60px;
+    top: 45%;
+  }
+  .title {
+    visibility: hidden;
+  }
+  .social {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 512px) {
+  .intro-container {
+    padding: 30px;
+    top: 50%;
   }
   .intro-container h1 {
-    font-size: 48px;
+    font-size: 6vh;
   }
+  .intro-container p {
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 700;
+  }
+  .title {
+    visibility: hidden;
+  }
+  .social {
+    visibility: hidden;
+  }
+}
+
+.title {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  writing-mode: vertical-lr;
+  padding-left: 90px;
+  color: #f1e9e6;
+}
+
+.title li {
+  text-transform: uppercase;
+  transform: rotateZ(180deg);
+  font-size: 0.8vw;
+  letter-spacing: 1px;
+}
+
+.social {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  padding-right: 100px;
+  bottom: 60px;
+  height: 240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  color: #f1e9e6;
+}
+
+.social p {
+  margin: 0;
+  letter-spacing: 1px;
+  font-size: 14px;
+  font-weight: 100;
 }
 
 /* ABOUT ME */
