--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -74,10 +74,10 @@ button {
   background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
-.intro-container h1 {
+.intro-container .Hi {
   margin: 0;
   color: #f1e9e6;
   font-family: sans-serif;
@@ -141,7 +141,7 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: translateX(-100%);
+  transform: translateX(-102%);
   background: linear-gradient(
     90deg,
     rgba(237, 94, 106, 0.5) 0%,
