--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   background-color: #48355b;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body::after {
@@ -47,7 +48,7 @@ button {
   opacity: 0;
   animation-name: IntroductionAnimation;
   animation-duration: 3s;
-  animation-delay: 0.1s;
+  animation-delay: 3s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
 }
@@ -164,6 +165,23 @@ button {
   writing-mode: vertical-lr;
   padding-left: 90px;
   color: #f1e9e6;
+  animation-name: TitleAnimation;
+  animation-duration: 1s;
+  animation-delay: 3.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
+}
+
+@keyframes TitleAnimation {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .title li {
@@ -187,6 +205,23 @@ button {
   justify-content: space-around;
   align-items: flex-end;
   color: #f1e9e6;
+  animation-name: SocialAnimation;
+  animation-duration: 0.5s;
+  animation-delay: 3.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
+}
+
+@keyframes SocialAnimation {
+  0% {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .social p {
@@ -206,6 +241,23 @@ button {
   transform: translateX(-50%);
   cursor: pointer;
   transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation-name: ShortLineAnimation;
+  animation-duration: 1s;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
+}
+
+@keyframes ShortLineAnimation {
+  0% {
+    opacity: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    height: 5.24vw;
+  }
 }
 
 .shortLine:hover {
