--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -238,7 +238,7 @@ button {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 0);
   cursor: pointer;
   transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   animation-name: ShortLineAnimation;
@@ -249,19 +249,19 @@ button {
   opacity: 0;
 }
 
+.shortLine:hover {
+  height: 3.8vw;
+}
+
 @keyframes ShortLineAnimation {
   0% {
     opacity: 0;
-    height: 0;
+    transform: translate(-50%, 100%);
   }
   100% {
     opacity: 1;
-    height: 5.24vw;
+    transform: translate(-50%, 0);
   }
-}
-
-.shortLine:hover {
-  height: 3.8vw;
 }
 
 .shortLine span {
